# VirtualBuoyancy-SIL

./: README.md  SIMULATOR_GUIDE.md  UNITY_INTEGRATION_GUIDE.md  ai_context_export.md  rov_user_manual.md
src/rov_bringup/: CMakeLists.txt  package.xml
src/rov_bringup/config/: rov_params.yaml
src/rov_bringup/launch/: rov_launch.py  teleop_launch.py
src/rov_control/: CMakeLists.txt  package.xml
src/rov_control/include/rov_control/: control_node.hpp  teleop_node.hpp
src/rov_control/src/: control_main.cpp  control_node.cpp  teleop_main.cpp  teleop_node.cpp
src/rov_hardware/: CMakeLists.txt  package.xml
src/rov_hardware/include/rov_hardware/: sensor_sync_node.hpp  serial_bridge_node.hpp  thruster_driver_node.hpp
src/rov_hardware/src/: sensor_sync_main.cpp  sensor_sync_node.cpp  serial_bridge_main.cpp  serial_bridge_node.cpp  thruster_driver_main.cpp  thruster_driver_node.cpp
src/rov_hardware/src/.antigravitycli/: 7a3aec3c-1533-4f2c-8252-e77ebdf3ffcc.json
src/rov_msgs/: CMakeLists.txt  package.xml
src/rov_msgs/msg/: Depth.msg  IMUData.msg  PIDGains.msg  SensorData.msg  Setpoint.msg  ThrusterCommand.msg
src/rov_sim/: .gitignore  README.md  package.xml  setup.py
src/rov_sim/config/scenarios/: depth_hold.yaml  yaw_sweep.yaml
src/rov_sim/launch/: rov_sim_launch.py
src/rov_sim/rov_sim/: __init__.py  mock_dynamics_node.py  scenario_runner.py
src/rov_sim/scripts/: compare_baseline.py  run_regression.sh
