<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the ROV system</description>
  <maintainer email="naren@todo.todo">naren</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rov_control</exec_depend>
  <exec_depend>rov_hardware</exec_depend>
  <exec_depend>rov_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
